# candle-dino-issue-demo

python/: main.py  requirements.txt
rust/: Cargo.toml
rust/src/: dinov2.rs  imagenet.rs  main.rs
